--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
             <div class="main-nav-wrapper">
                     <a href="index.html"><img src="./img/logo/main-logo.png" alt="Main-Logo"></a>
                 <ul class="menu">
-                <li class="menu-item"><a class="menu-link" href="#"> Who We Serve <i class="fa fa-angle-down" aria-hidden="true"></i> </a></li>
-                    <li class="menu-item"><a class="menu-link" href="#"> EchoVantage EHR <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                <li class="menu-item"><a class="transparent-link" href="#"> Who We Serve  <!--  <i class="fa fa-angle-down" aria-hidden="true"></i>  --></a></li>
+                    <li class="menu-item"><a class="transparent-link" href="#"> EchoVantage EHR <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                         <ul class="submenu">
                             <li class="submenu-item">
                                 <ul class="submenu-left">
@@ -62,8 +62,8 @@
                             </li>
                         </ul>
                     </li>
-                <li class="menu-item"><a  class="menu-link" href="#"> Capabilities <i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-                <li class="menu-item about"><a href="about.html" target="_blank"> About Us </a></li>
+                <li class="menu-item"><a  class="transparent-link" href="#"> Capabilities <!--  <i class="fa fa-angle-down" aria-hidden="true"></i>  --></a></li>
+                <li class="menu-item about"><a class="transparent-link" href="about.html" target="_blank"> About Us <!--  <i class="fa fa-angle-down" aria-hidden="true"></i>  --></a></li>
                 </ul>
             </div>
                 <a href="#" class="large-button">Request a  Demo</a>
@@ -71,12 +71,15 @@
     </nav>
     </header>
 <!-- End of Banner-Content -->
-<!-- Start of banner -->
-    <section>
-        <div class="bg">
-<h1>hello</h1>
+<section class="about-banner">
+    <div class="container">
+        <div class="about-banner-content">
+            <p class="">About Us</p>
+            <p class="">Now you can focus on what matters most.</p>
+            <hr class="small-hr banner-hr">
         </div>
-    </section>
+    </div>
+</section>
 <!-- End of banner -->
 <!-- Start of showcase -->
     <section>
