--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="main-nav-wrapper">
                     <a href="#"><img src="./img/logo/main-logo.png" alt="Main-Logo"></a>
                 <ul class="menu">
-                <li class="menu-item"><a href="#"> Who We Serve <i class="fa fa-angle-down" aria-hidden="true"></i> </a></li>
-                    <li class="menu-item"><a href="#"> EchoVantage EHR <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                <li class="menu-item"><a class="menu-link " href="#"> Who We Serve <!--  <i class="fa fa-angle-down" aria-hidden="true"></i>  --></a></li>
+                    <li class="menu-item"><a class="menu-link" href="#"> EchoVantage EHR <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                         <ul class="submenu">
                             <li class="submenu-item">
                                 <ul class="submenu-left">
@@ -62,8 +62,8 @@
                             </li>
                         </ul>
                     </li>
-                <li class="menu-item"><a href="#"> Capabilities <i class="fa fa-angle-down" aria-hidden="true"></i> </a></li>
-                <li class="menu-item about"><a href="about.html" target="_blank"> About Us </a></li>
+                <li class="menu-item"><a class="menu-link" href="#"> Capabilities <!--  <i class="fa fa-angle-down" aria-hidden="true"></i>  --> </a></li>
+                <li class="menu-item about"><a class="menu-link" href="about.html" target="_blank"> About Us <!--  <i class="fa fa-angle-down" aria-hidden="true"></i>  --> </a></li>
                 </ul>
             </div>
                 <a href="#" class="large-button">Request a  Demo</a>
