About page Sections Added and Commented as well

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <ul class="menu">
                 <li class="menu-item"><a class="transparent-link" href="#"> Who We Serve  <!--  <i class="fa fa-angle-down" aria-hidden="true"></i>  --></a></li>
                     <li class="menu-item"><a class="transparent-link" href="#"> EchoVantage EHR <i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                        <ul class="submenu">
+                        <ul class="submenu transparent">
                             <li class="submenu-item">
                                 <ul class="submenu-left">
                                     <li class="left-item item-a">Our Capabilities are sed lorem ipsum dolor amit.</li>
@@ -74,94 +74,35 @@
 <section class="about-banner">
     <div class="container">
         <div class="about-banner-content">
-            <p class="">About Us</p>
-            <p class="">Now you can focus on what matters most.</p>
-            <hr class="small-hr banner-hr">
+            <p class="about-head">About Us</p>
+            <p class="about-content">Since 1981, we have set the bar for behavioral health EHR.</p>
         </div>
     </div>
 </section>
 <!-- End of banner -->
-<!-- Start of showcase -->
-    <section>
-        <div class="container">
-            <div class="showcase">
-                <img class="showcase-left" src="./img/showcase-img.png" alt="Showcase-Image">
-                <div class="showcase-right">
-                    <img src="./img/logo/showcase-logo.png" alt="Showcase-logo">
-                    <p class="showcase-heading">The complete, visual based behavioral health EHR.</p>
-                    <hr class="small-hr">
-                    <p class="showcase-content">We empower our partners to be the most clinically effective and financially strong organizations in America. </p>
-                </div>
-            </div>
-        </div>
-    </section>
-<!-- End of Showcase-Section -->
-<!-- Start Of Client Section -->
-    <section class="client">
-        <div class=" container">
-            <div class="client-content">
-                <div class="client-section">
-                    <img src="./img/clients/person-1.jpg" alt="Client-Image">
-                    <h3>For Clinicians</h3>
-                    <hr class="small-hr client-hr">
-                    <p>Lorem ipsum dolor quis lorem ut libero malesuada feugiat. Vestibulum vehicula elementum lorem amet dui.</p>
-                    <a class="transparent-button" href="#" >Learn More</a>
-                </div>
-                <div class="client-section">
-                    <img src="./img/clients/person-2.jpg" alt="Client-Image">
-                    <h3>For Billers</h3>
-                    <hr class="small-hr client-hr">
-                    <p>Lorem ipsum dolor quis lorem ut libero malesuada feugiat. Vestibulum vehicula elementum lorem amet dui.</p>
-                    <a class="transparent-button" href="#" >Learn More </a>
-                </div>
-                <div class="client-section">
-                    <img src="./img/clients/person-3.jpeg" alt="Client-Image">
-                    <h3>EHR Admin</h3>
-                    <hr class="small-hr client-hr">
-                    <p>Nulla quis lorem ut libero lorem ipsum dolor set undars feugiat. Vestibulum ac diam sit amet quam vehicula.</p>
-                    <a class="transparent-button" href="#" >Learn More</a>
-                </div>
-                <div class="client-section">
-                    <img src="./img/clients/person-4.jpg" alt="Client-Image">
-                    <h3>For Executives</h3>
-                    <hr class="small-hr client-hr">
-                    <p>Nulla quis lorem ut libero lorem ipsum dolor set undars feugiat. Vestibulum ac diam sit amet quam vehicula.</p>
-                    <a class="transparent-button" href="#" >Learn More</a>
-                </div>
-            </div>
-        </div>
-    </section>
-<!-- End Of Client-Section -->
-<!-- Start Of Poster-Section -->
-    <section>
-        <div class="poster">
-            <div class="poster-left">
-                <div class="poster-lt-img">
-                    <img src="./img/poster-img.jpg" alt="Poster-Image">
-                </div>
-                <div class="poster-bg">
-                    <div class="bg-left">
-                        <p class="poster-num counter">291</p>
-                        <p class="poster-paragraph">happy clients served</p>
-                    </div>
-                    <div class="bg-right">
-                        <p class="poster-num"> <span class="poster-num counter">3.5</span>k</p>
-                        <p class="poster-paragraph">hours of collective experience</p>
-                    </div>
-                </div>
-            </div>
-            <div class="poster-right">
-                <p class="poster-heading">Experience. Stability. Solutions.</p>
-                <hr class="small-hr poster-hr">
-                <p class="poster-content">Echo has the experience, products, management and business model to ensure that we will continue to provide industry-defining products and services for many more years to come. Far far away, behind the word mountains, far from the countries.</p>
-                <div class="right-items">
-                    <a class="transparent-button" href="#">Peer to Peer</a>
-                    <a class="about-btn" href="#">About Us <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                </div>
-            </div>
-        </div>
-    </section>
-<!-- End Of Poster-Section -->
+<!-- Start Of About-Section-2 -->
+<!-- <section>
+    <div class="container">
+    <div class="abt-section-2">
+    <div class="abt-section-2-left">
+        <p class="section-2-head">What We Do</p>
+        <p class="section-2-content">We serve the information management needs of behavioral health and human service organizations. We are proud to have staff nationwide with our main office in New Hampshire, and a wide ranges of customers in over 35 states. Echo has implemented systems and improved the operations of agencies and organizations across the continuum of care and of every size, from small counseling centers to comprehensive statewide systems.</p>
+        <a class="transparent-button" href="#" >Explore Our Capabilities</a>
+    </div>
+    <div class="section-2-right"></div>
+    </div>
+    </div>
+</section> -->
+<!-- End Of About-Section-2 -->
+<!-- Start Of showcase content -->
+<!-- <section>
+    <div class="about-showcase">
+    <div class="about-showcase-content">
+        <p class="about-showcase-body">Our mission is to empower our partners to be the most <span class="color-line">clinically effective and financially strong </span>organizations in America.</p>
+    </div>
+    </div>
+</section> -->
+<!-- End Of Shoecase-Content -->
 <!-- Start of Gallery-Section -->
     <section class="gallery container">
         <div class="gallery-content">
@@ -224,95 +165,8 @@
     </section>
 <!-- End of Gallery-Section -->
 <!-- Start of Feedback-Section -->
-    <section>
-        <div class="feedback">
-            <div class="feedback-left">
-                <p class="fb-quote">&#10077;</p>
-                <p class="fb-left-head">What our users are saying:</p>
-                <hr class="small-hr fb-hr">
-            </div>
-            <div class="feedback-right">
-                <div class="fb-content">
-                    <p class="fb-right-head">Within 12 months, Echo’s RCM team was generating positive outcomes. Most notably, Heritage realized increased collection rates while their accounts receivable was reduced by 67%. This included recovering over $1 million that Heritage was prepared to write off.</p>
-                    <div class="fb-name">
-                        <p class="fb-client">Client Name</p>
-                        <p class="fb-company">Heritage Behavioral Health Center</p>
-                    </div>
-                </div>
-                <div class="fb-content">
-                    <p class="fb-right-head">Within 12 months, Echo’s RCM team was generating positive outcomes. Most notably, Heritage realized increased collection rates while their accounts receivable was reduced by 67%. This included recovering over $1 million that Heritage was prepared to write off.</p>
-                    <div class="fb-name">
-                        <p class="fb-client">Client Name</p>
-                        <p>Heritage Behavioral Health Center</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 <!-- End of Feedback-Section -->
 <!-- Start of Notification-Section -->
-    <section class="notification-section">
-        <div class="container">
-                <div class="notification">
-                    <div class="notification-content">
-                        <div class="notication-heading">
-                            <div>
-                                <a  class="transparent-button" href="#">View All Resources</a>
-                            </div>
-                            <p class="nt-head">Knowledge Center</p>
-                            <hr class="small-hr">
-                        </div>
-                    </div>
-                <div class="notification-main">
-                    <div class="notification-left">
-                        <div class="main-img">
-                            <img src="./img/notification-img.jpg" alt="Notification-Image">
-                        </div>
-                        <div class="main-img-content">
-                            <i class="far fa-comment-alt fa-2x nt-icon"></i>
-                            <p class="nt-time"><i class="far fa-clock"></i>4 min read</p>
-                            <p class="nt-left-subhead">NEWS</p>
-                            <p class="nt-lt-head">The Challenge of Tomorrow</p>
-                            <p class="nt-lt-content">Self-Care Today May Improve Your Tomorrow. In my last blog post, Learning to Survive, I talked about how our experience living during the pandemic will lorem ipsum dolor set undarspice…</p>
-                            <a class="nt-lt-btn"href="#">Read Article <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                    <div class="notification-right">
-                        <div class="right-section">
-                            <div class="box-left">
-                                <i class="fas fa-laptop-code fa-2x nt-icon web"></i>
-                                <p class="nt-rt-time"><i class="far fa-clock"></i>4 min read</p>
-                            </div>
-                            <div class="box-right">
-                                <p class="nt-rt-subhead">WEBINAR</p>
-                                <p class="nt-rt-head">Information Exchange: Are Behavioral Health Providers and Agencies Welcomed?</p>
-                            </div>
-                        </div>
-                        <div class="right-section">
-                            <div class="box-left">
-                                <i class="fas fa-film nt-icon fa-2x vid"></i>
-                                <p class="nt-rt-time"><i class="far fa-clock"></i>4 min read</p>
-                            </div>
-                            <div class="box-right">
-                                <p class="nt-rt-subhead-mid">VIDEO</p>
-                                <p class="nt-rt-head">Why True Integration Requires a Primary Focus on Behavioral Health</p>
-                            </div>
-                        </div>
-                        <div class="right-section">
-                            <div class="box-left">
-                                <i class="fas fa-laptop-code fa-2x nt-icon web"></i>
-                                <p class="nt-rt-time"><i class="far fa-clock"></i>4 min read</p>
-                            </div>
-                            <div class="box-right">
-                                <p class="nt-rt-subhead">WEBINAR</p>
-                                <p class="nt-rt-head">Using The CCBHC Process To Manage Organizational Quality</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 <!-- End of Notification-Section -->
 <!-- Start Of Demo section  -->
     <section class="demo-section">
