--- a/about.html
+++ b/about.html
@@ -81,27 +81,44 @@
 </section>
 <!-- End of banner -->
 <!-- Start Of About-Section-2 -->
-<!-- <section>
+<section>
     <div class="container">
     <div class="abt-section-2">
     <div class="abt-section-2-left">
         <p class="section-2-head">What We Do</p>
         <p class="section-2-content">We serve the information management needs of behavioral health and human service organizations. We are proud to have staff nationwide with our main office in New Hampshire, and a wide ranges of customers in over 35 states. Echo has implemented systems and improved the operations of agencies and organizations across the continuum of care and of every size, from small counseling centers to comprehensive statewide systems.</p>
-        <a class="transparent-button" href="#" >Explore Our Capabilities</a>
+        <a class="transparent-button" href="#" >Our Experience</a>
     </div>
-    <div class="section-2-right"></div>
+    <div class="abt-section-2-right">
+        <div class="section-rt-lt">
+            <div class="rt-lt-1">
+                <p class="section-2-num num-1 counter">35</p>
+                <p class="section-2-num-content">lorem ipsum dolorset undarspce</p>
+            </div>
+            <div class="rt-lt-1">
+                <p class="section-2-num num-2"><span class="counter">4</span>x</p>
+                <p class="section-2-num-content">lorem ipsum dolorset undarspce</p>
+            </div>
+        </div>
+        <div class="section-rt-rt">
+            <div class="right-rt">
+                <p class="section-2-num num-3"> <span class="counter">99</span>%</p>
+                <p class="section-2-num-content">lorem ipsum dolorset undarspce</p>
+            </div>
+        </div>
     </div>
     </div>
-</section> -->
+    </div>
+</section>
 <!-- End Of About-Section-2 -->
 <!-- Start Of showcase content -->
-<!-- <section>
+<section>
     <div class="about-showcase">
     <div class="about-showcase-content">
         <p class="about-showcase-body">Our mission is to empower our partners to be the most <span class="color-line">clinically effective and financially strong </span>organizations in America.</p>
     </div>
     </div>
-</section> -->
+</section>
 <!-- End Of Shoecase-Content -->
 <!-- Start of Gallery-Section -->
     <section class="gallery container">
